@@ -1131,6 +1131,7 @@ function parse_wikitext(id)
             var style = false;            
             var img_align = '';   
             var alt = "";                     
+            var from_clipboard = false;
             this.is_smiley = false;
 			this.in_link = false;
         }
@@ -1677,9 +1678,9 @@ function parse_wikitext(id)
                             }
                            else {                  
                                src = decodeURIComponent ? decodeURIComponent(attrs[i].escaped) : unescape(attrs[i].escaped);        
-                
-                              // src = unescape(attrs[i].escaped);  // external image (or smiley) 
-
+                               if(src.search(/data:image.*?;base64/) > -1) {
+                                   from_clipboard = true;
+                               }
                            }
                           if(src.match(/lib\/images\/smileys/)) {
                                 // src = 'http://' + window.location.host + src;
@@ -1874,7 +1875,7 @@ function parse_wikitext(id)
                var link_type = this.image_link_type;              
                this.image_link_type="";
                if(this.link_only) link_type = 'link_only';
-               if(!link_type){
+               if(!link_type  || from_clipboard){
                   link_type = 'nolink'; 
                }
                else if(link_type == 'detail') {
