@@ -1,7 +1,7 @@
 base  fckg
 author  Myron Turner
 email  turnermm02@shaw.ca
-date  2014-02-02
+date  2014-02-06
 name  fckgLite
 desc  WYSIWYG plugin for Dokuwiki
 url  http://www.mturner.org/fckgLite
