@@ -1,4 +1,4 @@
-rev 14-Feb_02-10_43
+rev 14-Feb_06-19_45
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -333,3 +333,7 @@ Fixed bug in extension recognition in image copy/paste (save.php)
 
 Feb 2
 Image copied from clipboard saved to namespace of page being edited
+
+Feb 6
+Support for placement of copy/paste images using Image Properties, without having to save and re-load.
+Link type reverts to 'nolink' which can be changed after save and re-load
